Add proxy support to autofill

--- a/appwrite.json
+++ b/appwrite.json
@@ -300,7 +300,8 @@
             "events": [],
             "scopes": [],
             "schedule": "",
-            "timeout": 15,
+            "timeout": 60,
+            "specification": "s-1vcpu-512mb",
             "enabled": true,
             "logging": true,
             "entrypoint": "src/main.js",
