--- a/functions/get-autofill-data/package.json
+++ b/functions/get-autofill-data/package.json
@@ -11,6 +11,7 @@
     "abort-controller": "^3.0.0",
     "cheerio": "1.0.0",
     "cross-fetch": "4.1.0",
+    "https-proxy-agent": "^7.0.6",
     "mime-types": "^3.0.1",
     "node-appwrite": "^14.0.0",
     "tidy-url": "^1.18.3",
