--- a/package.json
+++ b/package.json
@@ -15,22 +15,23 @@
     "dependencies": {
         "@sentry/vite-plugin": "^4.5.0",
         "@sentry/vue": "^10.22.0",
-        "appwrite": "^18.0.0",
+        "appwrite": "^21.2.1",
+        "cheerio": "^1.1.2",
         "dotenv": "^16.4.5",
         "material": "github:treeder/material",
         "material-symbols": "^0.31.0",
-        "pinia": "^2.1.7",
-        "sass": "^1.77.6",
+        "pinia": "^3.0.3",
+        "sass": "^1.93.2",
         "vite-plugin-vuetify": "^2.1.2",
-        "vue": "^3.4.29",
+        "vue": "^3.5.22",
         "vue-markdown-render": "^2.2.1",
         "vue-router": "^4.3.3",
-        "vuetify": "^3.6.10"
+        "vuetify": "^3.10.7"
     },
     "devDependencies": {
-        "@eslint/js": "^9.5.0",
+        "@eslint/js": "^9.38.0",
         "@mdi/js": "^7.4.47",
-        "@rushstack/eslint-patch": "^1.8.0",
+        "@rushstack/eslint-patch": "^1.14.1",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vue/eslint-config-prettier": "^10.2.0",
         "eslint": "^9.38.0",
