--- a/functions/get-autofill-data/package.json
+++ b/functions/get-autofill-data/package.json
@@ -12,6 +12,7 @@
     "cheerio": "1.0.0",
     "cross-fetch": "4.1.0",
     "https-proxy-agent": "^7.0.6",
+    "image-size": "^2.0.2",
     "mime-types": "^3.0.1",
     "node-appwrite": "^14.0.0",
     "tidy-url": "^1.18.3",
