--- a/appwrite.json
+++ b/appwrite.json
@@ -56,6 +56,54 @@
             "commands": "npm install",
             "specification": "s-1vcpu-512mb",
             "path": "functions/get-autofill-data"
+        },
+        {
+            "$id": "690f7bea000456345084",
+            "execute": [],
+            "name": "polar-list-events",
+            "enabled": true,
+            "logging": true,
+            "runtime": "node-20.0",
+            "scopes": [
+                "users.read",
+                "databases.read",
+                "columns.read",
+                "attributes.read",
+                "documents.read"
+            ],
+            "events": [
+                "databases.wishlist.tables.6679a593003489f76668.rows.*"
+            ],
+            "schedule": "",
+            "timeout": 15,
+            "entrypoint": "src/main.js",
+            "commands": "npm install",
+            "specification": "s-0.5vcpu-512mb",
+            "path": "functions/polar-list-events"
+        },
+        {
+            "$id": "690f81f1000991425e22",
+            "execute": [],
+            "name": "polar-update-customers",
+            "enabled": true,
+            "logging": true,
+            "runtime": "node-20.0",
+            "scopes": [
+                "users.read",
+                "avatars.read"
+            ],
+            "events": [
+                "users.*.update.name",
+                "users.*.update.email",
+                "users.*.create",
+                "users.*.delete"
+            ],
+            "schedule": "",
+            "timeout": 15,
+            "entrypoint": "src/main.js",
+            "commands": "npm install",
+            "specification": "s-0.5vcpu-512mb",
+            "path": "functions/polar-update-customers"
         }
     ],
     "tablesDB": [
