--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,6 @@
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
+  "trailingComma": "es5",
+  "tabWidth": 2,
   "semi": true,
-  "tabWidth": 4,
-  "singleQuote": false,
-  "printWidth": 100,
-  "trailingComma": "none"
+  "singleQuote": true
 }
