--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
+  "$schema": "https://json.schemastore.org/prettierrc",
   "semi": true,
-  "singleQuote": true
+  "tabWidth": 4,
+  "singleQuote": false,
+  "printWidth": 100,
+  "trailingComma": "none"
 }
