--- a/appwrite.json
+++ b/appwrite.json
@@ -104,6 +104,46 @@
             "commands": "npm install",
             "specification": "s-0.5vcpu-512mb",
             "path": "functions/polar-update-customers"
+        },
+        {
+            "$id": "690fc8f4002cff45eddc",
+            "execute": [
+                "users"
+            ],
+            "name": "get-polar-customer-data",
+            "enabled": true,
+            "logging": true,
+            "runtime": "node-20.0",
+            "scopes": [
+                "users.read"
+            ],
+            "events": [],
+            "schedule": "",
+            "timeout": 15,
+            "entrypoint": "src/main.js",
+            "commands": "npm install",
+            "specification": "s-0.5vcpu-512mb",
+            "path": "functions/get-polar-customer-data"
+        },
+        {
+            "$id": "690fc8f4002cff45eddd",
+            "execute": [
+                "users"
+            ],
+            "name": "get-polar-checkout",
+            "enabled": true,
+            "logging": true,
+            "runtime": "node-20.0",
+            "scopes": [
+                "users.read"
+            ],
+            "events": [],
+            "schedule": "",
+            "timeout": 15,
+            "entrypoint": "src/main.js",
+            "commands": "npm install",
+            "specification": "s-0.5vcpu-512mb",
+            "path": "functions/get-polar-checkout"
         }
     ],
     "tablesDB": [
