Use totp challenge dialog for removing totp

--- a/1password.env
+++ b/1password.env
@@ -10,3 +10,4 @@ VITE_UMAMI_URL="op://Personal/Umami/Wishlist/URL"
 VITE_UMAMI_ID="op://Personal/Umami/Wishlist/Website ID"
 VITE_UMAMI_DOMAINS="op://Personal/Umami/Wishlist/Domains"
 VITE_SENTRY_DSN="op://Dev Projects/readyto.gift/add more/Sentry DSN"
+VITE_APPWRITE_DEV_KEY="op://Dev Projects/readyto.gift/Appwrite/Dev Key"
