--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "material-symbols": "^0.31.0",
         "pinia": "^3.0.3",
         "sass": "^1.93.2",
+        "uuid": "^13.0.0",
         "vite-plugin-vuetify": "^2.1.2",
         "vue": "^3.5.22",
         "vue-markdown-render": "^2.2.1",
