--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dependencies": {
         "@sentry/vite-plugin": "^4.5.0",
         "@sentry/vue": "^10.22.0",
+        "@splidejs/vue-splide": "^0.6.12",
         "appwrite": "^21.2.1",
         "cheerio": "^1.1.2",
         "dotenv": "^16.4.5",
         "material": "github:treeder/material",
         "material-symbols": "^0.31.0",
+        "mime-types": "^3.0.2",
         "pinia": "^3.0.3",
         "sass": "^1.93.2",
         "uuid": "^13.0.0",
