Migrate to astro

--- a/1password.env
+++ b/1password.env
@@ -1,13 +1,14 @@
-VITE_APPWRITE_ENDPOINT="op://Dev Projects/readyto.gift/Appwrite/Host"
-VITE_APPWRITE_PROJECT="op://Dev Projects/readyto.gift/Appwrite Project"
-VITE_APPWRITE_DB="op://Dev Projects/readyto.gift/Appwrite/Database"
-VITE_APPWRITE_ITEM_COLLECTION="op://Dev Projects/readyto.gift/Appwrite/Items Collection"
-VITE_APPWRITE_LIST_COLLECTION="op://Dev Projects/readyto.gift/Appwrite/List Collection"
-VITE_APPWRITE_FULFILLMENT_COLLECTION="op://Dev Projects/readyto.gift/Appwrite/Fulfillment Collection"
-VITE_APPWRITE_IMAGE_BUCKET="op://Dev Projects/readyto.gift/Appwrite/Image Bucket"
-VITE_LOGIN_METHODS=password
-VITE_UMAMI_URL="op://Personal/Umami/Wishlist/URL"
-VITE_UMAMI_ID="op://Personal/Umami/Wishlist/Website ID"
-VITE_UMAMI_DOMAINS="op://Personal/Umami/Wishlist/Domains"
-VITE_SENTRY_DSN="op://Dev Projects/readyto.gift/add more/Sentry DSN"
-VITE_APPWRITE_DEV_KEY="op://Dev Projects/readyto.gift/Appwrite/Dev Key"
+APPWRITE_PROJECT="op://Dev Projects/readyto.gift/Appwrite Project"
+APPWRITE_ENDPOINT="op://Dev Projects/readyto.gift/Appwrite/Host"
+APPWRITE_DB="op://Dev Projects/readyto.gift/Appwrite/Database"
+APPWRITE_ITEM_COLLECTION="op://Dev Projects/readyto.gift/Appwrite/Items Collection"
+APPWRITE_LIST_COLLECTION="op://Dev Projects/readyto.gift/Appwrite/List Collection"
+APPWRITE_FULFILLMENT_COLLECTION="op://Dev Projects/readyto.gift/Appwrite/Fulfillment Collection"
+APPWRITE_IMAGE_BUCKET="op://Dev Projects/readyto.gift/Appwrite/Image Bucket"
+LOGIN_METHODS=password
+UMAMI_URL="op://Personal/Umami/Wishlist/URL"
+UMAMI_ID="op://Personal/Umami/Wishlist/Website ID"
+UMAMI_DOMAINS="op://Personal/Umami/Wishlist/Domains"
+SENTRY_DSN="op://Dev Projects/readyto.gift/add more/Sentry DSN"
+APPWRITE_DEV_KEY="op://Dev Projects/readyto.gift/Appwrite/Dev Key"
+APPWRITE_KEY="op://Dev Projects/readyto.gift/Server API Key"
