--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-    "name": "readyto.gift",
-    "version": "0.0.0",
-    "private": true,
+    "name": "astro",
     "type": "module",
+    "version": "0.0.1",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
-        "lint": "eslint . --fix",
-        "format": "prettier --write src/",
-        "op": "op run --no-masking --env-file=\"./1password.env\" -- pnpm",
-        "setup": "node setup"
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro",
+        "op": "op run --no-masking --env-file=\"./1password.env\" -- pnpm"
     },
     "dependencies": {
+        "@astrojs/vue": "^5.1.3",
+        "@sentry/astro": "^10.27.0",
         "@sentry/vite-plugin": "^4.5.0",
         "@sentry/vue": "^10.22.0",
         "@splidejs/vue-splide": "^0.6.12",
         "appwrite": "^21.2.1",
+        "astro": "^5.16.2",
         "cheerio": "^1.1.2",
         "dotenv": "^16.4.5",
         "material": "github:treeder/material",
@@ -26,10 +26,10 @@
         "sass": "^1.93.2",
         "uuid": "^13.0.0",
         "vite-plugin-vuetify": "^2.1.2",
-        "vue": "^3.5.22",
+        "vue": "^3.5.25",
         "vue-markdown-render": "^2.2.1",
         "vue-router": "^4.3.3",
-        "vuetify": "^3.10.7"
+        "vuetify": "^3.11.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.38.0",
