--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "op": "op run --no-masking --env-file=\"./1password.env\" -- pnpm"
     },
     "dependencies": {
+        "@astrojs/vercel": "^9.0.2",
         "@astrojs/vue": "^5.1.3",
         "@sentry/astro": "^10.27.0",
         "@sentry/vite-plugin": "^4.5.0",
