--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "astro build",
         "preview": "astro preview",
         "astro": "astro",
-        "op": "op run --no-masking --env-file=\"./1password.env\" -- pnpm"
+        "op": "op run --no-masking --env-file=\"./1password.env\" -- pnpm",
+        "make:lists-public-read": "node scripts/make-items-public-read.js"
     },
     "dependencies": {
         "@astrojs/vercel": "^9.0.2",
