Add private list limits

--- a/1password.env
+++ b/1password.env
@@ -12,3 +12,6 @@ UMAMI_DOMAINS="op://Personal/Umami/Wishlist/Domains"
 SENTRY_DSN="op://Dev Projects/readyto.gift/add more/Sentry DSN"
 APPWRITE_DEV_KEY="op://Dev Projects/readyto.gift/Appwrite/Dev Key"
 APPWRITE_KEY="op://Dev Projects/readyto.gift/Server API Key"
+
+FREE_TIER_PUBLIC_LIST_LIMIT=2
+FREE_TIER_ENABLE_AUTOFILL=false
