Add autofill restriction

--- a/1password.env
+++ b/1password.env
@@ -15,3 +15,4 @@ APPWRITE_KEY="op://Dev Projects/readyto.gift/Server API Key"
 
 FREE_TIER_PUBLIC_LIST_LIMIT=2
 FREE_TIER_ENABLE_AUTOFILL=false
+ENABLE_POLAR=true
