--- a/1password.env
+++ b/1password.env
@@ -16,3 +16,5 @@ APPWRITE_KEY="op://Dev Projects/readyto.gift/Server API Key"
 FREE_TIER_PUBLIC_LIST_LIMIT=2
 FREE_TIER_ENABLE_AUTOFILL=false
 ENABLE_POLAR=true
+POLAR_ACCESS_TOKEN="op://Private/Polar/API Keys/app"
+POLAR_PRO_PRODUCT_ID="op://Private/Polar/Products/Pro Product ID"
