--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "make:lists-public-read": "node scripts/make-items-public-read.js"
     },
     "dependencies": {
+        "@astrojs/node": "^9.5.1",
         "@astrojs/vercel": "^9.0.2",
         "@astrojs/vue": "^5.1.3",
         "@sentry/astro": "^10.27.0",
