--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@astrojs/node": "^9.5.1",
         "@astrojs/vercel": "^9.0.2",
         "@astrojs/vue": "^5.1.3",
+        "@nanostores/vue": "^1.0.1",
         "@sentry/astro": "^10.27.0",
         "@sentry/vite-plugin": "^4.5.0",
         "@sentry/vue": "^10.22.0",
@@ -23,6 +24,7 @@
         "cheerio": "^1.1.2",
         "dotenv": "^16.4.5",
         "mime-types": "^3.0.2",
+        "nanostores": "^1.1.0",
         "pinia": "^3.0.3",
         "sass": "^1.93.2",
         "uuid": "^13.0.0",
